--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"moment": "^2.18.1",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
+		"react-native-vector-icons": "^4.3.0",
 		"react-native-webview2": "^1.1.1",
 		"react-navigation": "^1.0.0-beta.11"
 	},
