--- a/ios/ITNews.xcodeproj/xcshareddata/xcschemes/ITNews.xcscheme
+++ b/ios/ITNews.xcodeproj/xcshareddata/xcschemes/ITNews.xcscheme
@@ -71,9 +71,9 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      buildConfiguration = "Release"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
@@ -116,6 +116,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "IT&#x8d44;&#x8baf;"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
